Fixed invisible tab when expanded layout is used

--- a/view/frontend/web/css/source/_module.less
+++ b/view/frontend/web/css/source/_module.less
@@ -91,6 +91,10 @@
                 margin: 0;
             }
 
+            > .item.content {
+                display: block;
+            }
+
             > .item.title {
                 .lib-css(border-top, @easytabs-expanded__border-top);
 
